infra/k8s/23-channel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: channel-service
  namespace: messageme
spec:
  selector:
    app: channel-service
  ports:
    - name: grpc
      port: 50054
      targetPort: 50054
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: channel-service
  namespace: messageme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: channel-service
  template:
    metadata:
      labels:
        app: channel-service
    spec:
      containers:
        - name: channel-service
          image: 978714898304.dkr.ecr.us-east-1.amazonaws.com/messageme/channel-service:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50054
