infra/k8s/25-message-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
  namespace: messageme
spec:
  selector:
    app: message-service
  ports:
    - name: grpc
      port: 50056
      targetPort: 50056
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  namespace: messageme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: 978714898304.dkr.ecr.us-east-1.amazonaws.com/messageme/message-service:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50056
