infra/k8s/28-file-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
  namespace: messageme
spec:
  selector:
    app: file-service
  ports:
    - name: grpc
      port: 50059
      targetPort: 50059
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: messageme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: 978714898304.dkr.ecr.us-east-1.amazonaws.com/messageme/file-service:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50059
