infra/k8s/31-ws-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway
  namespace: messageme
spec:
  selector:
    app: ws-gateway
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-gateway
  namespace: messageme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-gateway
  template:
    metadata:
      labels:
        app: ws-gateway
    spec:
      containers:
        - name: ws-gateway
          image: 978714898304.dkr.ecr.us-east-1.amazonaws.com/messageme/ws-gateway:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
